# sukimise

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .yapfignore  Dockerfile  Dockerfile.jenkins  README.md  caasst-deployment.yaml  create_deploy_img_k8s.sh  entry_point.sh  jenkins-deployment.yaml  jenkins-nginx.yaml  main.py  manage.py  mypy.ini  neo4j-deployment.yaml  neo4j-secret.yaml  nginx.yaml  postgres-deployment.yaml  pyproject.toml  redis-deployment.yaml  requirements.txt  setup.cfg  sukimise-deployment.yaml  sukimise-secret.yaml
app/: base_cache.py  config.py  embedding.py  models.py  product_cache.py  serializers.py  urls.py  utils.py  vector_search.py  views.py
app/fixtures/: data.json
app/migrations/: 0001_vector_extension.py  0002_initial.py  0003_remove_brand_brand_gin_idx_and_more.py  0004_remove_brand_brand_name_desc_idx_and_more.py  0005_remove_brand_brand_name_gin_idx_and_more.py  0006_alter_collection_options_alter_product_options_and_more.py  0007_alter_brand_options_alter_brand_brand_description_and_more.py  0008_alter_brand_active_alter_collection_active_and_more.py
infrastructure/: .env.example  docker-compose.yml  nginx.conf
mise/: asgi.py  settings.py  urls.py  views.py  wsgi.py
